--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "nuxt": "^3.8.0",
     "vue": "^3.3.7",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "firebase": "^10.5.2",
+    "nuxt-vuefire": "^0.4.0",
+    "vuefire": "^3.1.17"
   }
 }
