--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@firebase/app-types": "^0.9.0",
     "firebase": "^10.5.2",
+    "firebase-admin": "^11.11.0",
+    "firebase-functions": "^4.4.1",
     "nuxt-vuefire": "^0.4.0",
     "vuefire": "^3.1.17"
   }
