--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/image": "^1.0.0",
+    "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/tailwindcss": "^6.8.1",
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.8.0",
@@ -22,6 +23,7 @@
   },
   "dependencies": {
     "@firebase/app-types": "^0.9.0",
+    "@nuxt/ui": "^2.10.0",
     "firebase": "^10.5.2",
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.4.1",
