--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@firebase/app-types": "^0.9.0",
+    "@formkit/auto-animate": "^0.8.1",
     "@nuxt/ui": "^2.10.0",
     "firebase": "^10.5.2",
     "firebase-admin": "^11.11.0",
