--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "firebase-functions": "^4.4.1",
     "flowbite": "^2.0.0",
     "flowbite-vue": "^0.1.0",
+    "moment": "^2.29.4",
     "nuxt-vuefire": "^0.4.0",
     "vuefire": "^3.1.17"
   }
