--- a/.gitignore
+++ b/.gitignore
@@ -154,5 +154,5 @@ node_modules
 *.log
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,nuxtjs
-
+.firebase/
 service-account.json
