--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "cross-env NITRO_PRESET=firebase npm run build && copy .\\service-account.json .\\.output\\server\\ && npx firebase-tools deploy"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
