--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nuxt": "^3.8.0",
     "nuxt-icon": "^0.6.6",
     "postcss": "^8.4.31",
+    "sass": "^1.69.5",
     "tailwindcss": "^3.3.5",
     "vue": "^3.3.7",
     "vue-router": "^4.2.5"
@@ -32,9 +33,11 @@
     "firebase-functions": "^4.4.1",
     "flowbite": "^2.0.0",
     "flowbite-vue": "^0.1.0",
+    "fslightbox-vue": "^2.1.3",
     "moment": "^2.29.4",
     "nuxt-vuefire": "^0.4.0",
     "uid": "^2.0.2",
+    "v-viewer": "^3.0.11",
     "vuefire": "^3.1.17"
   }
 }
