--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/tailwindcss": "^6.8.1",
     "autoprefixer": "^10.4.16",
-    "nuxt": "^3.8.0",
+    "nuxt": "^3.10.0",
     "nuxt-icon": "^0.6.6",
     "postcss": "^8.4.31",
     "sass": "^1.69.5",
@@ -26,7 +26,6 @@
   },
   "dependencies": {
     "@firebase/app-types": "^0.9.0",
-    "@formkit/auto-animate": "^0.8.1",
     "@nuxt/ui": "^2.10.0",
     "cross-env": "^7.0.3",
     "firebase": "^10.5.2",
@@ -35,6 +34,7 @@
     "flowbite": "^2.0.0",
     "flowbite-vue": "^0.1.0",
     "fslightbox-vue": "^2.1.3",
+    "ipx": "^3.0.0",
     "moment": "^2.29.4",
     "nuxt-vuefire": "^0.4.0",
     "uid": "^2.0.2",
