--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@firebase/app-types": "^0.9.0",
     "@nuxt/ui": "^2.10.0",
+    "compressorjs": "^1.2.1",
     "cross-env": "^7.0.3",
     "firebase": "^10.5.2",
     "firebase-admin": "^11.11.0",
