--- a/package.json
+++ b/package.json
@@ -11,35 +11,36 @@
     "deploy": "cross-env NITRO_PRESET=firebase npm run build && copy .\\service-account.json .\\.output\\server\\ && npx firebase-tools deploy"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "@nuxt/image": "^1.0.0",
-    "@nuxtjs/color-mode": "^3.3.0",
-    "@nuxtjs/tailwindcss": "^6.8.1",
-    "autoprefixer": "^10.4.16",
-    "nuxt": "^3.10.0",
-    "nuxt-icon": "^0.6.6",
-    "postcss": "^8.4.31",
-    "sass": "^1.69.5",
-    "tailwindcss": "^3.3.5",
+    "@nuxt/devtools": "^1.4.1",
+    "@nuxt/image": "^1.8.0",
+    "@nuxtjs/color-mode": "^3.4.4",
+    "@nuxtjs/tailwindcss": "^6.12.1",
+    "autoprefixer": "^10.4.20",
+    "nuxt": "^3.13.0",
+    "nuxt-icon": "^0.6.10",
+    "postcss": "^8.4.42",
+    "sass": "^1.77.8",
+    "tailwindcss": "^3.4.10",
     "vue": "^3.3.7",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.4.3"
   },
   "dependencies": {
     "@firebase/app-types": "^0.9.0",
-    "@nuxt/ui": "^2.10.0",
+    "@nuxt/ui": "^2.18.4",
     "compressorjs": "^1.2.1",
     "cross-env": "^7.0.3",
-    "firebase": "^10.5.2",
-    "firebase-admin": "^11.11.0",
-    "firebase-functions": "^4.4.1",
-    "flowbite": "^2.0.0",
-    "flowbite-vue": "^0.1.0",
+    "firebase": "^10.13.1",
+    "firebase-admin": "^12.4.0",
+    "firebase-functions": "^4.9.0",
+    "flowbite": "2.3.0",
+    "flowbite-vue": "^0.1.6",
+    "flowbite-datepicker": "1.2.6",
     "fslightbox-vue": "^2.1.3",
-    "ipx": "^3.0.0",
-    "moment": "^2.29.4",
-    "nuxt-vuefire": "^0.4.0",
+    "ipx": "^3.0.1",
+    "moment": "^2.30.1",
+    "nuxt-vuefire": "^1.0.4",
     "uid": "^2.0.2",
-    "v-viewer": "^3.0.11",
-    "vuefire": "^3.1.17"
+    "v-viewer": "^3.0.13",
+    "vuefire": "^3.2.0"
   }
 }
